--- a/index.html
+++ b/index.html
@@ -3,15 +3,22 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="referrer" content="never">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
+	<meta http-equiv="Cache-Control" content="no-siteapp">
+	<meta name="robots" content="index,follow">
+	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>微信文章精选</title>
 	<meta name="description" content="微信公众号订阅号文章精选，收集热门文章">
-	<meta name="keywords" content="公众号,订阅号,微信,微信热门文章,朋友圈,微信精选，华强博客，杨华强">
+	<meta name="keywords" content="公众号,订阅号,微信,微信热门文章,朋友圈,微信精选,微信文章精选,微信文章,微信公众号文章">
 	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
+	<a href="https://github.com/WarnerYang" class="forkme" target="_blank">
+		<img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
+	</a>
 	<div id="wraper">
 		<div class="tips hide">网络异常</div>
 		<div id="menu">
@@ -45,6 +52,7 @@
 				<span class="line"></span>
 			</div>
 		</div>
+
 		<div class="fiexd_btn">
 			<a href="javascript:;" class="refresh">刷新</a>
 			<a href="javascript:;" class="vision" lite="true">标准</a>
