--- a/index.html
+++ b/index.html
@@ -3,48 +3,39 @@
 <head>
 	<meta charset="utf-8">
 	<meta name="referrer" content="never">
-	<meta http-equiv="X-UA-Compatible" content="IE=edge, chrome=1">
-	<meta http-equiv="Cache-Control" content="no-siteapp">
-	<meta name="robots" content="index,follow">
-	<meta name="format-detection" content="telephone=no">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
 	<title>微信文章精选</title>
-	<meta name="description" content="微信公众号订阅号文章精选，收集热门文章">
-	<meta name="keywords" content="公众号,订阅号,微信,微信热门文章,朋友圈,微信精选,微信文章精选,微信文章,微信公众号文章">
-	<link rel="icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon" />
 	<link rel="stylesheet" type="text/css" href="style.css">
 </head>
 <body>
-	<a href="https://github.com/WarnerYang" class="forkme" target="_blank">
-		<img src="https://camo.githubusercontent.com/38ef81f8aca64bb9a64448d0d70f1308ef5341ab/68747470733a2f2f73332e616d617a6f6e6177732e636f6d2f6769746875622f726962626f6e732f666f726b6d655f72696768745f6461726b626c75655f3132313632312e706e67" alt="Fork me on GitHub" data-canonical-src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png">
-	</a>
 	<div id="wraper">
-		<div class="tips hide">网络异常</div>
+		<div class="tips hide"></div>
 		<div id="menu">
 			<div class="menu_bar">
-				<a href="javascript:;" id="0" class="active">最热门</a>
-				<a href="javascript:;" id="1">值得看</a>
-				<a href="javascript:;" id="2">段子手</a>
-				<a href="javascript:;" id="3">养生堂</a>
-				<a href="javascript:;" id="4">私房话</a>
-				<a href="javascript:;" id="5">八卦精</a>
-				<a href="javascript:;" id="6">爱生活</a>
-				<a href="javascript:;" id="7">财经迷</a>
-				<a href="javascript:;" id="8">汽车迷</a>
-				<a href="javascript:;" id="9">科技咖</a>
-				<a href="javascript:;" id="10">潮人帮</a>
-				<a href="javascript:;" id="11">辣妈帮</a>
-				<a href="javascript:;" id="12">点赞党</a>
-				<a href="javascript:;" id="13">旅行家</a>
-				<a href="javascript:;" id="14">职场人</a>
-				<a href="javascript:;" id="15">美食家</a>
-				<a href="javascript:;" id="16">古今通</a>
-				<a href="javascript:;" id="17">学霸族</a>
-				<a href="javascript:;" id="18">星座控</a>
-				<a href="javascript:;" id="19">体育迷</a>
+				<a href="javascript:;" class="active">热门</a>
+				<a href="javascript:;">搞笑</a>
+				<a href="javascript:;">养生堂</a>
+				<a href="javascript:;">私房话</a>
+				<a href="javascript:;">八卦精</a>
+				<a href="javascript:;">科技咖</a>
+				<a href="javascript:;">财经迷</a>
+				<a href="javascript:;">汽车控</a>
+				<a href="javascript:;">生活家</a>
+				<a href="javascript:;">时尚圈</a>
+				<a href="javascript:;">育儿</a>
+				<a href="javascript:;">旅游</a>
+				<a href="javascript:;">职场</a>
+				<a href="javascript:;">美食</a>
+				<a href="javascript:;">历史</a>
+				<a href="javascript:;">教育</a>
+				<a href="javascript:;">星座</a>
+				<a href="javascript:;">体育</a>
+				<a href="javascript:;">军事</a>
+				<a href="javascript:;">游戏</a>
+				<a href="javascript:;">萌宠</a>
 				<div class="cr hide">
-					&copy; 2017<a href="http://www.yanghuaqiang.com">華強博客</a><a href="statement.html">声明</a>
+					<a href="http://www.yanghuaqiang.com">華強博客</a>
 				</div>
 			</div>
 			<div class="menu_more" id="hamburger">
@@ -52,7 +43,6 @@
 				<span class="line"></span>
 			</div>
 		</div>
-
 		<div class="fiexd_btn">
 			<a href="javascript:;" class="refresh">刷新</a>
 			<a href="javascript:;" class="vision" lite="true">标准</a>
