--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 				<a href="javascript:;">游戏</a>
 				<a href="javascript:;">萌宠</a>
 				<div class="cr hide">
-					<a href="http://www.yanghuaqiang.com">華強博客</a>
+					<a href="https://github.com/WarnerYang/wx">GitHub源码</a>
 				</div>
 			</div>
 			<div class="menu_more" id="hamburger">
